src/App.css
:root {
  --blue: #007bff;
  --indigo: #6610f2;
  --purple: #6f42c1;
  --pink: #e83e8c;
  --red: #dc3545;
  --orange: #fd7e14;
  --yellow: #ffc107;
  --green: #28a745;
  --teal: #20c997;
  --cyan: #17a2b8;
  --white: #fff;
  --gray: #6c757d;
  --gray-dark: #343a40;
  --primary: #007bff;
  --secondary: #6c757d;
  --success: #28a745;
  --info: #17a2b8;
  --warning: #ffc107;
  --danger: #dc3545;
  --light: #ddd;
  --dark: #343a40;
}

.App-logo {
  height: 35vmin;
  max-height: 1440px;
  pointer-events: none;
}

.App-Title {
  font-size: 10vmin;
  position: absolute;
  top: 47%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.hr {
  margin: 4rem 0;
}

hr.hr-text {
  position: relative;
  border: none;
  height: 1px;
  background: lightgrey;
}

hr.hr-text::before {
    content: attr(data-content);
    display: inline-block;
    background: #fff;
    font-weight: bold;
    font-size: 2rem;
    color: black;
    border-radius: 30rem;
    padding: 0.2rem 2rem;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.App-header {
  text-align: center;
  background-color: #282c34;
  min-height: 70vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: white;
}

svg {
  vertical-align: top !important;
}

.socialButton {
  height: 30px;
}

.socialButton svg {
  position: relative;
  top: 0px;
  color: white;
  width: 30px;
  height: 30px;
}

.socialButton svg:hover {
  color: lightgrey;
}

h1, h2 {
  text-align: center;
}

.card-columns {
  column-count: 2;
}

@media (min-width: 992px) {
  .card-columns {
    column-count: 3;
  }
}

@media (min-width: 1200px) {
  .card-columns {
    column-count: 4;
  }
}

